--- a/styles.css
+++ b/styles.css
@@ -134,3 +134,105 @@ nav .fa {
         padding: 30px;
     }
 }
+
+/* Courses Section */
+.courses {
+    width: 80%;
+    padding-top: 100px;
+    margin: auto;
+    text-align: center;
+}
+
+.courses p {
+    color: #777;
+    padding: 10px;
+    font-weight: 300;
+    line-height: 22px;
+    font-size: 14px;
+}
+
+.row {
+    width: 100%;
+    margin-top: 5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.course_col {
+    flex-basis: 31%;
+    background: #fff3f3;
+    border-radius: 10px;
+    padding: 20px 12px;
+    margin-bottom: 5%;
+    transition: .5s;
+}
+
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+
+.course_col:hover {
+    box-shadow: 0 0 20px 0px rgba(0, 0, 0, .2);
+}
+
+@media (max-width: 700px) {
+    .row {
+        flex-direction: column;
+    }
+}
+
+/* Campus Section */
+.campus {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.campus_col {
+    flex-basis: 32%;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    position: relative;
+    overflow: hidden;
+}
+
+.campus_col img{
+    width: 100%;
+    display: block;
+}
+
+.layer{
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: .5s;
+}
+
+.layer:hover {
+    background-color:  rgba(226, 0, 0, 0.7);
+}
+
+h3{
+    width: 100%;
+    font-size: 26px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    color: #fff;
+    transform: translateX(-50%);
+    font-weight: 500;
+    opacity: 0;
+    transition: .5s;
+}
+
+.layer:hover h3{
+    bottom: 49%;
+    opacity: 1;
+}
