--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 .header {
   min-height: 100vh;
   width: 100%;
-  background: linear-gradient(
-    rgba(4, 9, 30, 0.7),
-     rgba(4, 9, 30, 0.7)), url('images/banner.png');
+  background: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)),
+    url("images/banner.png");
   background-size: cover;
   background-position: center;
 }
@@ -39,200 +38,230 @@ nav img {
 }
 
 .nav_links ul li a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 13px;
-    text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  font-size: 13px;
+  text-transform: uppercase;
 }
 
 .nav_links ul li::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    display: block;
-    margin: auto;
-    background-color: #f44336;
-    transition: .3s;
+  content: "";
+  width: 0;
+  height: 3px;
+  display: block;
+  margin: auto;
+  background-color: #f44336;
+  transition: 0.3s;
 }
 
 .nav_links ul li:hover::after {
-    width: 100%;
+  width: 100%;
 }
 
 .text-box {
-    width: 90%;
-    color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+  width: 90%;
+  color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .text-box h1 {
-    font-size: 64px;
+  font-size: 64px;
 }
 
 .text-box p {
-    margin: 10px 0 40px;
-    font-size: 14px;
-    color: #fff;
+  margin: 10px 0 40px;
+  font-size: 14px;
+  color: #fff;
 }
 
 .hero-btn {
-    display: inline-block;
-    text-decoration: none;
-    border: 1px solid #fff;
-    background: transparent;
-    color: #fff;
-    padding: 12px 36px;
-    position: relative;
-    cursor: pointer;
+  display: inline-block;
+  text-decoration: none;
+  border: 1px solid #fff;
+  background: transparent;
+  color: #fff;
+  padding: 12px 36px;
+  position: relative;
+  cursor: pointer;
 }
 
-.hero-btn:hover{
-    border: 1px solid #f44336;
-    background-color: #f44336;
-    transition: 1s;
+.hero-btn:hover {
+  border: 1px solid #f44336;
+  background-color: #f44336;
+  transition: 1s;
 }
 
 .hero-btn:focus {
-    scale: .9;
+  scale: 0.9;
 }
 
 nav .fa {
-    display: none;
+  display: none;
 }
 
 /* MOBILE HERO SECTION */
 @media (max-width: 920px) {
-    .text-box h1 {
-        font-size: 20px;
-    }
-    .nav_links ul li {
-        display: block;
-    }
-    .nav_links {
-        position: absolute;
-        background-color: #f44336;
-        height: 100vh;
-        width: 200px;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
-    }
-    nav .fa {
-        display: block;
-        color: #fff;
-        cursor: pointer;
-        margin: 10px;
-        font-size: 22px;
-    }
-    .nav_links ul {
-        padding: 30px;
-    }
+  .text-box h1 {
+    font-size: 20px;
+  }
+  .nav_links ul li {
+    display: block;
+  }
+  .nav_links {
+    position: absolute;
+    background-color: #f44336;
+    height: 100vh;
+    width: 200px;
+    top: 0;
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
+  }
+  nav .fa {
+    display: block;
+    color: #fff;
+    cursor: pointer;
+    margin: 10px;
+    font-size: 22px;
+  }
+  .nav_links ul {
+    padding: 30px;
+  }
 }
 
 /* Courses Section */
 .courses {
-    width: 80%;
-    padding-top: 100px;
-    margin: auto;
-    text-align: center;
+  width: 80%;
+  padding-top: 100px;
+  margin: auto;
+  text-align: center;
 }
 
 .courses p {
-    color: #777;
-    padding: 10px;
-    font-weight: 300;
-    line-height: 22px;
-    font-size: 14px;
+  color: #777;
+  padding: 10px;
+  font-weight: 300;
+  line-height: 22px;
+  font-size: 14px;
 }
 
 .row {
-    width: 100%;
-    margin-top: 5%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
+  margin-top: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .course_col {
-    flex-basis: 31%;
-    background: #fff3f3;
-    border-radius: 10px;
-    padding: 20px 12px;
-    margin-bottom: 5%;
-    transition: .5s;
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  padding: 20px 12px;
+  margin-bottom: 5%;
+  transition: 0.5s;
 }
 
-h3{
-    text-align: center;
-    font-weight: 600;
-    margin: 10px 0;
+h3 {
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
 }
 
 .course_col:hover {
-    box-shadow: 0 0 20px 0px rgba(0, 0, 0, .2);
+  box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 }
 
 @media (max-width: 700px) {
-    .row {
-        flex-direction: column;
-    }
+  .row {
+    flex-direction: column;
+  }
 }
 
 /* Campus Section */
 .campus {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 50px;
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 50px;
 }
 
 .campus_col {
-    flex-basis: 32%;
-    border-radius: 10px;
-    margin-bottom: 30px;
-    position: relative;
-    overflow: hidden;
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
 }
 
-.campus_col img{
-    width: 100%;
-    display: block;
+.campus_col img {
+  width: 100%;
+  display: block;
 }
 
-.layer{
-    background-color: transparent;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: .5s;
+.layer {
+  background-color: transparent;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
 }
 
 .layer:hover {
-    background-color:  rgba(226, 0, 0, 0.7);
+  background-color: rgba(226, 0, 0, 0.7);
 }
 
-h3{
-    width: 100%;
-    font-size: 26px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    color: #fff;
-    transform: translateX(-50%);
-    font-weight: 500;
-    opacity: 0;
-    transition: .5s;
+h3 {
+  width: 100%;
+  font-size: 26px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  color: #fff;
+  transform: translateX(-50%);
+  font-weight: 500;
+  opacity: 0;
+  transition: 0.5s;
 }
 
-.layer:hover h3{
-    bottom: 49%;
-    opacity: 1;
+.layer:hover h3 {
+  bottom: 49%;
+  opacity: 1;
+}
+
+/* Facilities Section */
+.facilities {
+  width: 80%;
+  margin: auto;
+  padding-top: 10 0px;
+  text-align: center;
+}
+
+.facilities_col {
+  flex-basis: 31%;
+  border-radius: 10px;
+  text-align: left;
+  margin-bottom: 5%;
+}
+
+.facilities_col img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+.facilities_col p {
+  padding: 0;
+}
+
+.facilities_col h4 {
+  margin-top: 16px;
+  margin-bottom: 15px;
+  text-align: left;
 }
