--- a/styles.css
+++ b/styles.css
@@ -265,3 +265,50 @@ h3 {
   margin-bottom: 15px;
   text-align: left;
 }
+
+/* Testimonials Section */
+.testimonials {
+  width: 80%;
+  margin: auto;
+  padding-top: 100px;
+  text-align: center;
+}
+
+.testimonial_col {
+  flex-basis: 45%;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  text-align: left;
+  background: #fff3f3;
+  padding: 25px;
+  cursor: pointer;
+  display: flex;
+}
+
+.testimonial_col img {
+  height: 40px;
+  margin-left: 5px;
+  margin-right: 50px;
+  border-radius: 50%;
+}
+
+.testimonial_col p {
+  padding: 0;
+}
+
+.testimonial_col h3 {
+  margin-top: 15px;
+  text-align: left;
+}
+
+.testimonial_col .fa {
+  color: #f44336;
+}
+
+@media (max-width: 700px) {
+  .testimonial_col img {
+    margin-left: 5px;
+    margin-right: 50px;
+    border-radius: 50%;
+  }
+}
