Added call to action section

--- a/styles.css
+++ b/styles.css
@@ -312,3 +312,28 @@ h3 {
     border-radius: 50%;
   }
 }
+
+/* call to action */
+.cta {
+  width: 80%;
+  margin: 100px auto;
+  background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/banner2.jpg);
+  background-position: center;
+  background-size: cover;
+  border-image-slice: cover;
+  border-radius: 10px;
+  text-align: center;
+  padding: 100px 0;
+}
+
+.cta h1 {
+  color: #fff;
+  margin-bottom: 40px;
+  padding: 0;
+}
+
+@media (max-width: 700px) {
+  .cta {
+    font-size: 24px;
+  }
+}
